...
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context="com.example.michailkoupparis.songle.SongSelection"
    >

    <TextView
        android:id="@+id/song_selection_title"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:text="@string/song_selection"
        android:gravity="center"
        android:textSize="40sp"
        android:typeface="serif"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <Button
        android:id="@+id/go_to_song_player"
        android:layout_width="197dp"
        android:layout_height="39dp"
        android:text="@string/go_to_found_songs"
        android:textColor="@color/MintCream"
        android:background="@drawable/home_button"
        app:layout_constraintBottom_toBottomOf="parent"
...
